--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "restaurant-menu-app",
   "version": "0.0.0",
+  "author": {
+    "name": "Ricardo Carcasson",
+    "email": "ricardo.carcasson@gmail.com"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,10 +15,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.1.0",
+    "@angular/cdk": "^16.2.5",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
     "@angular/forms": "^16.1.0",
+    "@angular/material": "^16.2.5",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
